# kubrick-multimodal-agent

./: .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.chainlit  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml  pyproject.toml  video_utils.py
.records/: registry_2025-05-2821:11:03.json
agent/: agent.py  tester.py  utils.py
agent-api/: .env.example  Dockerfile  pyproject.toml
agent-api/notebooks/: 1_tool_use_playground.ipynb  2_agent_playground.ipynb  3_pxt_as_mcp.ipynb  tool_use_playground.ipynb
agent-api/src/agent_api/: __init__.py  api.py  config.py  models.py  opik_utils.py
agent-api/src/agent_api/agent/: __init__.py  base_agent.py  memory.py
agent-api/src/agent_api/agent/groq/: groq_agent.py  groq_tool.py  models.py
agent-api/src/agent_api/core/agent/: __init__.py  base_agent.py  groq_agent.py
agent/api/: api.py  models.py
agent/core/: base.py  opik.py  settings.py
agent/utils/: functions.py  queries.py
ingestion/: ingest.py  pyproject.toml  test.py  tester.py
ingestion/core/: caption.py  functions.py  iterator.py  models.py  splitter.py  tools.py  utils.py  video_processor.py
ingestion/mcp/: server.py  tester.py  tools.py  utils.py
ingestion/notebooks/: embedding.ipynb  video_ingestion.ipynb
kubrick-api/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
kubrick-api/notebooks/: 1_tool_use_playground.ipynb  2_agent_playground.ipynb  3_memory_playground.ipynb
kubrick-api/src/kubrick_api/: __init__.py  api.py  config.py  models.py  opik_utils.py  tools.py
kubrick-api/src/kubrick_api/agent/: base_agent.py  memory.py
kubrick-api/src/kubrick_api/agent/groq/: groq_agent.py
kubrick-mcp/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
kubrick-mcp/notebooks/: video_ingestion_process.ipynb
kubrick-mcp/src/kubrick_mcp/: __init__.py  config.py  opik_utils.py  prompts.py  resources.py  server.py  tools.py
kubrick-mcp/src/kubrick_mcp/video/: video_search_engine.py
kubrick-mcp/src/kubrick_mcp/video/ingestion/: functions.py  models.py  registry.py  tools.py  video_processor.py
kubrick-ui/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  tailwind.config.ts  vite.config.ts
kubrick-ui/src/components/: BackgroundAnimation.tsx  ChatHeader.tsx  ChatInput.tsx  Message.tsx  TypingIndicator.tsx  VideoSidebar.tsx
kubrick-ui/src/pages/: Index.tsx
mcp-server/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  server.py  tools.py
mcp-server/notebooks/: 1_video_ingestion_process.ipynb  2_video_captioner_groq.ipynb  3_mcp_server_inspection.ipynb  mcp_server_inspection.ipynb  video_captioner_groq.ipynb  video_ingestion_process.ipynb
mcp-server/src/mcp_server/: __init__.py  config.py  opik_utils.py  prompts.py  resources.py  server.py  tools.py  utils.py
mcp-server/src/mcp_server/utils/: env.py
mcp-server/src/mcp_server/video/: video_search_engine.py
mcp-server/src/mcp_server/video/ingestion/: caption.py  constants.py  functions.py  registry.py  splitter.py  tools.py  video_processor.py
mcp-server/src/mcp_server/video_ingestion/: caption.py  functions.py  models.py  registry.py  tools.py  video_processor.py
mcp-server/video_ingestion/: caption.py  functions.py  tools.py  video_processor.py
notebooks/: 280525_datacheck.ipynb  [ingestion]_playground.ipynb  agent_playground.ipynb  frames.csv  texts_csv.csv
notes/: 11042025.md  16052025.md
src/sport_assistant/: __init__.py  config.py
src/sport_assistant/core/: prompts.py
src/sport_assistant/core/agent/: base.py
src/sport_assistant/core/agent/openai/: agent.py  utils.py
src/sport_assistant/infrastructure/: api.py  opik.py
src/sport_assistant/infrastructure/mcp/: client.py  server.py
src/utils/: tool_utils.py
ui/: .dockerignore  Dockerfile  README.md  app.py  chainlit_app.py  main.py  pyproject.toml  style.css
ui/.chainlit/: config.toml
