[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "blobfile==3.0.0",
    "datatrove>=0.4.0",
    "decord==0.6.0",
    "einops==0.8.1",
    "fsspec>=2024.12.0",
    "iopath==0.1.10",
    "ipykernel>=6.29.5",
    "lm-eval==0.4.8",
    "msgspec==0.19.0",
    "numpy==2.1.2",
    "omegaconf==2.3.0",
    "openai>=1.75.0",
    "openai-whisper",
    "opencv-python==4.11.0.86",
    "orjson==3.10.15",
    "pillow==11.0.0",
    "pip>=25.0.1",
    "pixeltable>=0.3.12",
    "pyahocorasick==2.1.0",
    "pycocoevalcap==1.2",
    "pynvml==12.0.0",
    "rouge-score==0.1.2",
    "sacrebleu==2.5.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers>=4.1.0",
    "sentencepiece==0.2.0",
    "spacy>=3.8.5",
    "tiktoken==0.9.0",
    "timm==1.0.15",
    "tokenizers==0.21.1",
    "torch>=2.6.0",
    "torchcodec==0.1.0",
    "torchdata==0.11.0",
    "transformers>=4.51.1",
    "viztracer==1.0.3",
    "wandb==0.19.8",
    "webdataset==0.2.111",
    "xformers>=0.0.29.post3",
    "yt-dlp>=2025.3.31",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
