[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "pixeltable>=0.3.12",
    "qwen-vl-utils>=0.0.11",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
transformers = { git = "https://github.com/huggingface/transformers" }
