[project]
name = "kubrick-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.55.0",
    "click>=8.2.1",
    "fastmcp>=2.5.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "moviepy>=2.2.1",
    "openai>=1.91.0",
    "opik>=1.7.36",
    "pixeltable>=0.4.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.0",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubrick_mcp"]

[tool.ruff]
target-version = "py312"
