[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.2.7",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "openai-whisper>=20240930",
    "pixeltable>=0.3.12",
    "ruff>=0.11.12",
]
