[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for Video Processing Tools, Resources and Prompts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.2",
    "groq>=0.26.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "moviepy>=2.2.1",
    "openai>=1.82.1",
    "openai-whisper>=20240930",
    "pixeltable==0.3.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.ruff]
target-version = "py312"
